# ACS_ClasswideProjects

./: .gitignore  Makefile  README.md
Experiment0_HNSWLIB_Baseline/: CONCLUSIONS.md  README.md
Experiment10_AnnSSD_Design_Space/: CONCLUSIONS.md  README.md
Experiment12_Unified_Comparison/: CONCLUSIONS.md  README.md
Experiment2_Tiered_vs_DRAM/: CONCLUSIONS.md  README.md
Experiment3_Cache_Policies/: CONCLUSIONS.md
Experiment5_SSD_Sensitivity/: README.md
Experiment6_Cost_Performance/: CONCLUSIONS.md  README.md
Experiment7_Scaling/: CONCLUSIONS.md  README.md
MidSemester/: CMakeLists.txt  README.md
MidSemester/p1/scripts/: generate_all_plots.sh  plot_p1.py  plot_roofline.py  run_all_stride_dtype_sweeps.sh  run_all_sweeps_and_stream.sh  run_mul_sweep.sh  run_saxpy_stride_sweep.sh  run_saxpy_sweep.sh  run_stencil_sweep.sh  run_sweep.sh
MidSemester/p1/src/: CMakeLists.txt  dot.cpp  mul.cpp  saxpy.cpp  stencil.cpp
MidSemester/p2/: .gitignore
MidSemester/p2/analysis/: analyze_exp1.py  analyze_exp4.py  analyze_exp5.py  analyze_exp6.py  analyze_exp7.py
MidSemester/p2/scripts/: collect_system_info.ps1  collect_system_info.sh  setup_env.ps1
MidSemester/p2/scripts/exp1/: exp1_zero_queue.ps1
MidSemester/p2/scripts/exp2/: exp2_pattern_sweep.ps1
MidSemester/p2/scripts/exp3/: exp3_rw_mix.ps1
MidSemester/p2/scripts/exp5/: exp5_working_set.ps1
MidSemester/p2/scripts/exp6/: exp6_cache_miss_pcm.ps1  exp6_timing_only.ps1
MidSemester/p2/scripts/exp7/: exp7_timing_only.ps1  exp7_timing_only.sh  exp7_tlb_miss.sh  exp7_tlb_miss_pcm.ps1
MidSemester/p2/src/: CMakeLists.txt  cache_miss_kernel.cpp  tlb_miss_kernel.cpp  tlb_miss_kernel_windows.cpp
(+425 files in other folders)
